// Vitest Snapshot v1

exports[`Card > Card baseVue demo works fine 1`] = `
<t-card
  style="width: 400px;"
  title="标题"
>
   仅有内容区域的卡片形式。卡片内容区域可以是文字、图片、表单、表格等形式信息内容。可使用大中小不同的卡片尺寸，按业务需求进行呈现。 
</t-card>
`;

exports[`Card > Card borderedNoneVue demo works fine 1`] = `
<div
  class="demo-card"
  data-v-3afd352c=""
>
  <t-card
    data-v-3afd352c=""
    hover-shadow=""
    style="width: 400px;"
    title="标题"
  >
     仅有内容区域的卡片形式。卡片内容区域可以是文字、图片、表单、表格等形式信息内容。可使用大中小不同的卡片尺寸，按业务需求进行呈现。 
  </t-card>
</div>
`;

exports[`Card > Card borderedVue demo works fine 1`] = `
<t-card
  bordered=""
  style="width: 400px;"
>
   仅有内容区域的卡片形式。卡片内容区域可以是文字、图片、表单、表格等形式信息内容。可使用大中小不同的卡片尺寸，按业务需求进行呈现。 
</t-card>
`;

exports[`Card > Card footerActionsVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-card
    cover="https://tdesign.gtimg.com/site/source/card-demo.png"
    style="width: 400px;"
    theme="poster2"
  />
  <br />
  <t-card
    cover="https://tdesign.gtimg.com/site/source/card-demo.png"
    style="width: 400px;"
    theme="poster2"
  />
  <br />
  <t-card
    cover="https://tdesign.gtimg.com/site/source/card-demo.png"
    style="width: 400px;"
    theme="poster2"
  />
</t-space>
`;

exports[`Card > Card footerContentActionsVue demo works fine 1`] = `
<t-card
  cover="https://tdesign.gtimg.com/site/source/card-demo.png"
  data-v-15ae4635=""
  style="width: 400px;"
  theme="poster2"
/>
`;

exports[`Card > Card footerContentVue demo works fine 1`] = `
<t-card
  cover="https://tdesign.gtimg.com/site/source/card-demo.png"
  style="width: 400px;"
  theme="poster2"
/>
`;

exports[`Card > Card footerVue demo works fine 1`] = `
<t-card
  bordered=""
  cover="https://tdesign.gtimg.com/site/source/card-demo.png"
  style="width: 400px;"
/>
`;

exports[`Card > Card headerAllPropsVue demo works fine 1`] = `
<t-card
  actions="操作"
  description="描述"
  hover-shadow=""
  style="width: 400px;"
  subtitle="副标题"
  title="标题"
>
   卡片内容，以描述性为主，可以是文字、图片或图文组合的形式。按业务需求进行自定义组合。 
</t-card>
`;

exports[`Card > Card headerBorderedVue demo works fine 1`] = `
<t-card
  header-bordered=""
  style="width: 400px;"
  title="标题"
>
   卡片内容，以描述性为主，可以是文字、图片或图文组合的形式。按业务需求进行自定义组合。 
</t-card>
`;

exports[`Card > Card headerDescriptionVue demo works fine 1`] = `
<t-card
  actions="操作"
  description="描述"
  hover-shadow=""
  style="width: 400px;"
  title="标题"
>
   卡片内容，以描述性为主，可以是文字、图片或图文组合的形式。按业务需求进行自定义组合。 
</t-card>
`;

exports[`Card > Card headerFooterActionsVue demo works fine 1`] = `
<t-card
  cover="https://tdesign.gtimg.com/site/source/card-demo.png"
  data-v-bed46286=""
  description="卡片内容"
  style="width: 400px;"
  title="标题"
/>
`;

exports[`Card > Card headerSubtitleFooterActionsVue demo works fine 1`] = `
<t-card
  cover="https://tdesign.gtimg.com/site/source/card-demo.png"
  style="width: 400px;"
  subtitle="副标题"
  title="标题"
/>
`;

exports[`Card > Card headerSubtitleVue demo works fine 1`] = `
<t-card
  actions="操作"
  hover-shadow=""
  style="width: 400px;"
  subtitle="副标题"
  title="标题"
>
   卡片内容，以描述性为主，可以是文字、图片或图文组合的形式。按业务需求进行自定义组合。 
</t-card>
`;

exports[`Card > Card headerVue demo works fine 1`] = `
<t-card
  hover-shadow=""
  style="width: 400px;"
  title="标题"
>
   卡片内容，以描述性为主，可以是文字、图片或图文组合的形式。按业务需求进行自定义组合。 
</t-card>
`;

exports[`Card > Card hoverVue demo works fine 1`] = `
<t-card
  actions="操作"
  hover-shadow=""
  style="width: 400px;"
  title="标题"
>
   这是一段很长很长很长很长很长很长很长很长很长很长很长很长
  很长很长很长很长很长很长很长很长很长很长很长很长很长很长
  很长很长很长很长很长很长很长很长很长很长很长很长很长很长
  很长很长很长很长很长很长很长很长很长很长很长的内容示例。 
</t-card>
`;

exports[`Card > Card smallVue demo works fine 1`] = `
<t-card
  actions="操作"
  hover-shadow=""
  size="small"
  style="width: 400px;"
  title="标题"
>
   这是一段很长很长很长很长很长很长很长很长很长很长很长很长
  很长很长很长很长很长很长很长很长很长很长很长很长很长很长
  很长很长很长很长很长很长很长很长很长很长很长很长很长很长
  很长很长很长很长很长很长很长很长很长很长很长的内容示例。 
</t-card>
`;
